data load on page load, not working too good

--- a/.env
+++ b/.env
@@ -11,5 +11,21 @@ POSTGRES_DB=accessdb
 # Alternatively, you can specify the full DATABASE_URL
 # DATABASE_URL=postgresql://postgres:your_password@localhost:5432/big_data_db
 
+# Redis cache settings
+USE_REDIS_CACHE=true
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+CACHE_TTL=300
+
+# WebSocket settings
+ENABLE_WEBSOCKETS=true
+
+# Performance settings
+DEFAULT_PAGE_SIZE=100
+MAX_PAGE_SIZE=1000
+STREAM_CHUNK_SIZE=1000
+
 # Page size for data tables
 PAGE_SIZE=100
