--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.110.0
-uvicorn[standard]==0.28.0
+uvicorn[standard]==0.34.0
+httptools==0.6.1
 jinja2==3.1.3
 sqlalchemy==2.0.28
 asyncpg==0.29.0
@@ -7,3 +8,4 @@ redis==5.0.1
 python-dotenv==1.0.1
 pydantic==2.6.1
 pydantic-settings==2.1.0
+orjson==3.10.0  # Faster JSON library
