--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@ redis==5.0.1
 python-dotenv==1.0.1
 pydantic==2.6.1
 pydantic-settings==2.1.0
-orjson==3.10.0  # Faster JSON library
+orjson==3.10.0
+python-jose==3.4.0
+passlib==1.7.4
+bcrypt==4.0.1
+python-multipart==0.0.19
